# neori

./: README.md  application.py  pyproject.toml  requirements.txt
neori/: __init__.py  colors.py  food.py  game.py  interface.py  snake.py  utils.py  world.py
neori/resources/: theme.json
