[tool.poetry]
name = "neori"
version = "0.1.0"
description = ""
authors = ["Jorge Brito <jorge.brito.json@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pygame = "^2.5.2"
pygame-gui = "^0.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
